fixed gap issue

--- a/styles/sass/partials/_recipe-section.scss
+++ b/styles/sass/partials/_recipe-section.scss
@@ -8,35 +8,29 @@
 
 .recipe-wrap {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    justify-content: space-between;
     padding: 0px;
-    gap: 40px;
-    max-width: 1080px;
 
     .column {
         display: flex;
+        width: 48%;
         flex-direction: column;
-        align-items: flex-start;
         padding: 0px;
-        gap: 40px;
-        flex: 1 1 0;
 
         .box {
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            padding: 32px;
-            gap: 10px;
-            border: 4px solid $primary;
+            align-items: center;
+            box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
             border-radius: 4px;
             width: 100%;
-            flex: 1 1 auto;
+            margin: 20px 0;
+            background-color: $quinary;
 
             .img-wrapper {
                 display: flex;
-                width: 100%;
-                border: 3px solid $senary;
+                width: 75%;
+                box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
                 border-radius: 4px;
                 object-fit: fill;
                 img {
@@ -45,16 +39,20 @@
                 }
             }
 
-            .text-heading {
-                display: flex;
-                align-items: center;
-                width: 100%;
-            }
-
-            .paragraph-container {
-                display: flex;
-                align-items: center;
-                width: 100%;
+            .text-container {
+                width: 75%; 
+                
+                .text-heading {
+                        display: flex;
+                        align-items: center;
+                        width: 100%;
+                    }
+                
+                    .paragraph-container {
+                        display: flex;
+                        align-items: center;
+                        width: 100%;
+                    }
             }
         }
     }
