--- a/styles/styles.css
+++ b/styles/styles.css
@@ -807,33 +807,21 @@ header nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0px;
-  gap: 40px;
-  max-width: 1080px;
 }
 .recipe-wrap .column {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 48%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   padding: 0px;
-  gap: 40px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 0px;
-          flex: 1 1 0;
 }
 .recipe-wrap .column .box {
   display: -webkit-box;
@@ -843,24 +831,23 @@ header nav ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  padding: 32px;
-  gap: 10px;
-  border: 4px solid #EB9A9A;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
+          box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
   border-radius: 4px;
   width: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  margin: 20px 0;
+  background-color: #FAF0EE;
 }
 .recipe-wrap .column .box .img-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  border: 3px solid #FAE4E4;
+  width: 75%;
+  -webkit-box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
+          box-shadow: 0 3px 10px rgba(240, 187, 183, 0.716);
   border-radius: 4px;
   -o-object-fit: fill;
      object-fit: fill;
@@ -870,7 +857,10 @@ header nav ul {
      object-fit: fill;
   width: 100%;
 }
-.recipe-wrap .column .box .text-heading {
+.recipe-wrap .column .box .text-container {
+  width: 75%;
+}
+.recipe-wrap .column .box .text-container .text-heading {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -879,7 +869,7 @@ header nav ul {
           align-items: center;
   width: 100%;
 }
-.recipe-wrap .column .box .paragraph-container {
+.recipe-wrap .column .box .text-container .paragraph-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -890,7 +880,6 @@ header nav ul {
 }
 
 footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
